[gd_scene load_steps=2 format=3 uid="uid://dpb1q415u0y2g"]

[ext_resource type="Script" path="res://scripts/base_button.gd" id="1_7dl83"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(180, 200)
size_flags_horizontal = 3
toggle_mode = true
action_mode = 0
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("1_7dl83")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
